--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 .main-section{
+	
+	background-color: pink;
+}
+.section{
 	font-family: serif;
 	grid-area: sections;
-	background-color: pink;
-
-}
+	
+	}
 .main-doc {
 		    font-size: 1.5em;
 		   
@@ -23,7 +26,7 @@
 
 
 }
-.nav-section{
+.nav-link{
 	color: white;
 	text-decoration: none;
 	padding-right: 30px;
@@ -35,3 +38,21 @@
 .navigate{
 	position: fixed;
 }
+ @media screen and (min-width: 400px;){
+		   	
+		   	h1{
+		   		font-size: 30px;
+		   	}
+		   	h2{
+		   		font-size: 25px;
+		   	}
+		   	h3{
+		   		font-size: 20px;
+		   	}
+		   .section{
+			font-family: serif;
+			grid-area: sections;
+
+			
+			}
+		 }
