--- a/style-portafolio.css
+++ b/style-portafolio.css
@@ -1,126 +1,141 @@
 nav{
-			display: flex;
-			grid-area: header;
-			background: #A994BA;
-			height: 50px;
-			padding-top: 15px;
-			margin-bottom: 50px;
-			color: #ECF3F7;
-			padding-bottom: 15px;
-			align-items: center;
-		}
-		body{
-			
-			background: linear-gradient(35deg, #FDFDFD, #E9DCF4);
-			
-		}
-		.nav-link{
-			font-size: 35px;
-			font-weight: bold;
-			font-family: serif,"Brush Script MT", "Brush Script Std";
-			font-style: oblique;
-			color: #ECF3F7;
-			margin-right: 30px;
-			margin-left: 30px;
-			text-decoration: none;
+	display: flex;
+	grid-area: header;
+	height: 35px;
+	padding-top: 15px;
+	margin-bottom: 50px;
+	background: linear-gradient(25deg, #E9DCF4, #FDFDFD);
+	padding-bottom: 15px;
+	align-items: center;
+}
+body{
 
-		}
-		.nav-link:hover{
-			color: #E4E1EF;
-		}
-		#header-img{
-			opacity: 0.9;
-			display: inline-flex;
-			border-radius: 50%;
-			margin-left: 50px;
-			width: 225px;
-			height: 142px;
-		}
-		#contact-image{
-			margin-top: 50px;
-			display: block;
-			align-items: center;
-			padding: 10px;
-			
-		}
-		.images-contact{
-			width: 100px; 
-			height: 100px;
-			padding: 15px;
-			border-radius: 50%;
-		}
-		.container {
-		    font-size: 1.5em;
-		    min-height: 300px;
-		    width: 100%;
-		    display: grid;
-		    grid-template-columns: auto;
-		    grid-template-rows: auto 1fr auto;
-		    grid-template-areas:
-		      "header"
-		      "content"
-		      "footer";
-		  }
-		  #content
-		  {
-		  	grid-area: content;
-		  	text-align: center;
-		  }
-		  #footer{
-		  	background: #A994BA;
-		  	padding-top: 15px;
-		  	padding-bottom: 15px;
-		  	text-align: center;
-		  	grid-area: footer;
+	background: linear-gradient(35deg, #FDFDFD, #E9DCF4);
 
-		  }
-		  #submit{
-		  	border-radius: 10px;
-		  	color: #15577C;
-		  	background: #B9D8F0;
-		  	border-color:#8AADC3;
-		  	padding: 5px;
-		  	font-weight: bold;
-		  	font-size: 15px;
+}
+.nav-link{
+	font-size: 35px;
+	font-weight: bold;
+	font-family: "Arial Black", Gadget;
+	color: #4A235A;
+	margin-right: 30px;
+	margin-left: 30px;
+	text-decoration: none;
 
-		  }
-		  #email{
-		  	border-radius: 5px;
-		  	padding: 3px;
-		  }
-		  #about{
-		  display: flex;
-		 text-align: center;
-		 align-items: center;
-		 justify-content: center;
-		  }
-		 
-		   @media screen and (min-width: 400px;){
-		   	
-		   	#about{
-		   		font-size: 10px;
-		   	}
-		   	h1{
-		   		font-size: 30px;
-		   	}
-		   	h2{
-		   		font-size: 25px;
-		   	}
-		   	h3{
-		   		font-size: 20px;
-		   	}
-		   	footer{
-		   		font-size: 15px;
-		   	}
-		   }
-		   #header{
-		   	position: fixed; 
-			top: 0; 
-			width:100%; 
-			z-index: 1;
-		   }
+}
+.nav-link:hover{
+	color: #E8DAEF;
+}
+#header-img{
+	opacity: 0.9;
+	display: inline-flex;
+	border-radius: 50%;
+	margin-left: 50px;
+	width: 225px;
+	height: 142px;
+}
+#contact-image{
+	margin-top: 50px;
+	display: block;
+	align-items: center;
+	padding: 10px;
 
-		   #home{
-		   		align-content: center;
-		   		padding-top:  50px;
-		   }
+}
+.images-project{
+	
+	border-radius: 10px;
+}
+.container {
+	font-size: 1.5em;
+	min-height: 300px;
+	width: 100%;
+	display: grid;
+	grid-template-columns: auto;
+	grid-template-rows: auto 1fr auto;
+	grid-template-areas:
+	  "header"
+	  "content"
+	  "footer";
+}
+#grid-section
+{
+	grid-area: content;
+	text-align: center;
+}
+#footer{
+	background: #A994BA;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	text-align: center;
+	grid-area: footer;
+
+}
+#submit{
+	border-radius: 10px;
+	color: #15577C;
+	background: #B9D8F0;
+	border-color:#8AADC3;
+	padding: 5px;
+	font-weight: bold;
+	font-size: 15px;
+
+}
+#email{
+	border-radius: 5px;
+	padding: 3px;
+}
+#about{
+	display: flex;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+}
+
+@media screen and (min-width: 400px;){
+	
+	#about{
+		font-size: 10px;
+	}
+	h1{
+		font-size: 30px;
+	}
+	h2{
+		font-size: 25px;
+	}
+	h3{
+		font-size: 20px;
+	}
+	footer{
+		font-size: 15px;
+	}
+}
+#header{
+	position: fixed; 
+	top: 0; 
+	width:100%; 
+	z-index: 1;
+}
+
+#home{
+	align-content: center;
+	padding-top:  50px;
+}
+.grid{
+	display: grid;
+	grid-template-columns: auto auto;
+	background-color: #E8DAEF;
+	padding: 10px;
+	border-radius: 5px;
+}
+.project-tile {
+	background-color: #F5EEF8;
+	border: 1px solid rgba(74, 35, 90, 0.8);
+	padding: 20px;
+	font-size: 30px;
+	text-align: center;
+	border-radius: 3px;
+}
+#welcome-section{
+	margin-top: 45px;
+	height:100vh;
+}
